Kolokvijum1[Priprema]/ForRange/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID

    8 body: _LBRACKET variable_list statement_list _RBRACKET

    9 variable_list: %empty
   10              | variable_list variable

   11 variable: _TYPE _ID _SEMICOLON

   12 statement_list: %empty
   13               | statement_list statement

   14 statement: compound_statement
   15          | assignment_statement
   16          | if_statement
   17          | return_statement
   18          | for_statement

   19 compound_statement: _LBRACKET statement_list _RBRACKET

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   21 num_exp: exp
   22        | num_exp _AROP exp

   23 exp: literal
   24    | _ID
   25    | function_call
   26    | _LPAREN num_exp _RPAREN

   27 literal: _INT_NUMBER
   28        | _UINT_NUMBER

   29 $@2: %empty

   30 function_call: _ID $@2 _LPAREN argument _RPAREN

   31 argument: %empty
   32         | num_exp

   33 if_statement: if_part
   34             | if_part _ELSE statement

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement

   36 $@3: %empty

   37 $@4: %empty

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement

   39 rel_exp: num_exp _RELOP num_exp

   40 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 7 11
_IF (259) 35
_ELSE (260) 34
_RETURN (261) 40
_FOR (262) 38
_IN (263) 38
_RANGE (264) 38
_COLUMN (265) 38
_ID (266) 5 7 11 20 24 30 38
_INT_NUMBER (267) 27
_UINT_NUMBER (268) 28
_LPAREN (269) 5 26 30 35 38
_RPAREN (270) 5 26 30 35 38
_LBRACKET (271) 8 19
_RBRACKET (272) 8 19
_ASSIGN (273) 20
_SEMICOLON (274) 11 20 40
_AROP (275) 22
_RELOP (276) 39
ONLY_IF (277)


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
program (24)
    on left: 1, on right: 0
function_list (25)
    on left: 2 3, on right: 1 3
function (26)
    on left: 5, on right: 2 3
$@1 (27)
    on left: 4, on right: 5
parameter (28)
    on left: 6 7, on right: 5
body (29)
    on left: 8, on right: 5
variable_list (30)
    on left: 9 10, on right: 8 10
variable (31)
    on left: 11, on right: 10
statement_list (32)
    on left: 12 13, on right: 8 13 19
statement (33)
    on left: 14 15 16 17 18, on right: 13 34 35 38
compound_statement (34)
    on left: 19, on right: 14
assignment_statement (35)
    on left: 20, on right: 15
num_exp (36)
    on left: 21 22, on right: 20 22 26 32 39 40
exp (37)
    on left: 23 24 25 26, on right: 21 22
literal (38)
    on left: 27 28, on right: 23 38
function_call (39)
    on left: 30, on right: 25
$@2 (40)
    on left: 29, on right: 30
argument (41)
    on left: 31 32, on right: 30
if_statement (42)
    on left: 33 34, on right: 16
if_part (43)
    on left: 35, on right: 33 34
for_statement (44)
    on left: 38, on right: 18
$@3 (45)
    on left: 36, on right: 38
$@4 (46)
    on left: 37, on right: 38
rel_exp (47)
    on left: 39, on right: 35
return_statement (48)
    on left: 40, on right: 17


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


State 14

    8 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 9 (variable_list)

    variable_list  go to state 16


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 16

    8 body: _LBRACKET variable_list . statement_list _RBRACKET
   10 variable_list: variable_list . variable

    _TYPE  shift, and go to state 17

    $default  reduce using rule 12 (statement_list)

    variable        go to state 18
    statement_list  go to state 19


State 17

   11 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 20


State 18

   10 variable_list: variable_list variable .

    $default  reduce using rule 10 (variable_list)


State 19

    8 body: _LBRACKET variable_list statement_list . _RBRACKET
   13 statement_list: statement_list . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _FOR       shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 26

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    for_statement         go to state 32
    return_statement      go to state 33


State 20

   11 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 34


State 21

   35 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 35


State 22

   40 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 40
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 23

   38 for_statement: _FOR . _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement

    _LPAREN  shift, and go to state 44


State 24

   20 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 45


State 25

   19 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 46


State 26

    8 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 8 (body)


State 27

   13 statement_list: statement_list statement .

    $default  reduce using rule 13 (statement_list)


State 28

   14 statement: compound_statement .

    $default  reduce using rule 14 (statement)


State 29

   15 statement: assignment_statement .

    $default  reduce using rule 15 (statement)


State 30

   16 statement: if_statement .

    $default  reduce using rule 16 (statement)


State 31

   33 if_statement: if_part .
   34             | if_part . _ELSE statement

    _ELSE  shift, and go to state 47

    $default  reduce using rule 33 (if_statement)


State 32

   18 statement: for_statement .

    $default  reduce using rule 18 (statement)


State 33

   17 statement: return_statement .

    $default  reduce using rule 17 (statement)


State 34

   11 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 11 (variable)


State 35

   35 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 48
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43
    rel_exp        go to state 49


State 36

   24 exp: _ID .
   30 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 29 ($@2)
    $default  reduce using rule 24 (exp)

    $@2  go to state 50


State 37

   27 literal: _INT_NUMBER .

    $default  reduce using rule 27 (literal)


State 38

   28 literal: _UINT_NUMBER .

    $default  reduce using rule 28 (literal)


State 39

   26 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 51
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 40

   22 num_exp: num_exp . _AROP exp
   40 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 52
    _AROP       shift, and go to state 53


State 41

   21 num_exp: exp .

    $default  reduce using rule 21 (num_exp)


State 42

   23 exp: literal .

    $default  reduce using rule 23 (exp)


State 43

   25 exp: function_call .

    $default  reduce using rule 25 (exp)


State 44

   38 for_statement: _FOR _LPAREN . _ID $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement

    _ID  shift, and go to state 54


State 45

   20 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 55
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 46

   13 statement_list: statement_list . statement
   19 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _FOR       shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 56

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    for_statement         go to state 32
    return_statement      go to state 33


State 47

   34 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _FOR       shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 57
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    for_statement         go to state 32
    return_statement      go to state 33


State 48

   22 num_exp: num_exp . _AROP exp
   39 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 53
    _RELOP  shift, and go to state 58


State 49

   35 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 59


State 50

   30 function_call: _ID $@2 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 60


State 51

   22 num_exp: num_exp . _AROP exp
   26 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 61
    _AROP    shift, and go to state 53


State 52

   40 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 40 (return_statement)


State 53

   22 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    exp            go to state 62
    literal        go to state 42
    function_call  go to state 43


State 54

   38 for_statement: _FOR _LPAREN _ID . $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement

    $default  reduce using rule 36 ($@3)

    $@3  go to state 63


State 55

   20 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   22 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 64
    _AROP       shift, and go to state 53


State 56

   19 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 19 (compound_statement)


State 57

   34 if_statement: if_part _ELSE statement .

    $default  reduce using rule 34 (if_statement)


State 58

   39 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    num_exp        go to state 65
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43


State 59

   35 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _FOR       shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 66
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    for_statement         go to state 32
    return_statement      go to state 33


State 60

   30 function_call: _ID $@2 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 36
    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38
    _LPAREN       shift, and go to state 39

    $default  reduce using rule 31 (argument)

    num_exp        go to state 67
    exp            go to state 41
    literal        go to state 42
    function_call  go to state 43
    argument       go to state 68


State 61

   26 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 26 (exp)


State 62

   22 num_exp: num_exp _AROP exp .

    $default  reduce using rule 22 (num_exp)


State 63

   38 for_statement: _FOR _LPAREN _ID $@3 . _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement

    _IN  shift, and go to state 69


State 64

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 20 (assignment_statement)


State 65

   22 num_exp: num_exp . _AROP exp
   39 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 53

    $default  reduce using rule 39 (rel_exp)


State 66

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 35 (if_part)


State 67

   22 num_exp: num_exp . _AROP exp
   32 argument: num_exp .

    _AROP  shift, and go to state 53

    $default  reduce using rule 32 (argument)


State 68

   30 function_call: _ID $@2 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 70


State 69

   38 for_statement: _FOR _LPAREN _ID $@3 _IN . _RANGE literal _COLUMN literal $@4 _RPAREN statement

    _RANGE  shift, and go to state 71


State 70

   30 function_call: _ID $@2 _LPAREN argument _RPAREN .

    $default  reduce using rule 30 (function_call)


State 71

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE . literal _COLUMN literal $@4 _RPAREN statement

    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38

    literal  go to state 72


State 72

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal . _COLUMN literal $@4 _RPAREN statement

    _COLUMN  shift, and go to state 73


State 73

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN . literal $@4 _RPAREN statement

    _INT_NUMBER   shift, and go to state 37
    _UINT_NUMBER  shift, and go to state 38

    literal  go to state 74


State 74

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal . $@4 _RPAREN statement

    $default  reduce using rule 37 ($@4)

    $@4  go to state 75


State 75

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal $@4 . _RPAREN statement

    _RPAREN  shift, and go to state 76


State 76

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _FOR       shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 77
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    for_statement         go to state 32
    return_statement      go to state 33


State 77

   38 for_statement: _FOR _LPAREN _ID $@3 _IN _RANGE literal _COLUMN literal $@4 _RPAREN statement .

    $default  reduce using rule 38 (for_statement)
